# fake-comp-bio-project

./: .gitignore  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.claude/agents/: README.md
.claude/commands/: work-issue.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
docs/: index.md
docs/design/phylo-upgma/: overview.md
fakephylo/: __init__.py  tree_builder.py
tests/: test_tree_builder.py
